--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_register.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_register.xml
@@ -31,7 +31,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="32dp"
-                android:text="REGISTER"
+                android:text="@string/register"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
-                android:text="Please register first to create your account"
+                android:text="@string/register_txt"
                 style="@style/poppinsMedium"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
-                android:text="Email"
+                android:text="@string/email_profile"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
                 style="@style/poppinsMedium"
                 android:paddingHorizontal="20dp"
                 android:background="@drawable/editxtcustom"
-                android:hint="Input your email"
+                android:hint="@string/email_txt"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
@@ -88,7 +88,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
-                android:text="Username"
+                android:text="@string/username_profile"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +105,7 @@
                 style="@style/poppinsMedium"
                 android:paddingHorizontal="20dp"
                 android:background="@drawable/editxtcustom"
-                android:hint="Input your username"
+                android:hint="@string/username_txt"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
@@ -118,7 +118,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
-                android:text="Name"
+                android:text="@string/name_profile"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +133,7 @@
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/editxtcustom"
                 android:ems="10"
-                android:hint="Input your name"
+                android:hint="@string/name_txt"
                 android:inputType="text"
                 android:paddingHorizontal="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -148,7 +148,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
                 style="@style/poppinsBold20"
-                android:text="Password"
+                android:text="@string/password_profile"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -165,7 +165,7 @@
                 android:paddingStart="20dp"
                 android:paddingEnd="60dp"
                 android:background="@drawable/editxtcustom"
-                android:hint="input your password"
+                android:hint="@string/password_txt"
                 android:inputType="textPassword"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -177,7 +177,7 @@
                 android:layout_height="50dp"
                 android:layout_marginEnd="5dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="Toggle Password Visibility"
+                android:contentDescription="@string/show_pass"
                 android:src="@drawable/baseline_visibility_off"
                 app:layout_constraintBottom_toBottomOf="@+id/etPassword"
                 app:layout_constraintEnd_toEndOf="@+id/etPassword"
@@ -191,7 +191,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
                 style="@style/poppinsBold20"
-                android:text="Country"
+                android:text="@string/city_profile"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -207,7 +207,7 @@
                 style="@style/poppinsMedium"
                 android:paddingHorizontal="20dp"
                 android:background="@drawable/editxtcustom"
-                android:hint="Input your country"
+                android:hint="@string/city_txt"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -223,7 +223,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/btncustom"
                 android:paddingHorizontal="40dp"
-                android:text="Register"
+                android:text="@string/register_btn"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/etCity" />
@@ -235,7 +235,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
-                android:text="Back to login"
+                android:text="@string/back_to_login"
                 android:translationZ="11dp"
                 app:layout_constraintBottom_toBottomOf="@+id/bannerTop"
                 app:layout_constraintEnd_toEndOf="parent"
