--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/fragment_disease_list.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/fragment_disease_list.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:text="Disease"
+        android:text="@string/disease"
         android:translationZ="11dp"
         app:layout_constraintBottom_toBottomOf="@+id/bannerTop"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        android:text="Disease List"
+        android:text="@string/disease_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bannerTop" />
@@ -47,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:text="Here is a list of diseases on bean leaves"
+        android:text="@string/disease_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDiseasetxt" />
