--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_login.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
                 style="@style/poppinsBold30"
-                android:text="LOGIN"
+                android:text="@string/login"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iconLogin" />
@@ -47,7 +47,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
                 style="@style/poppins15"
-                android:text="Please log in first to get started !"
+                android:text="@string/login_txt"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
@@ -60,7 +60,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
                 style="@style/poppinsBold20"
-                android:text="USERNAME"
+                android:text="@string/username"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
                 android:layout_marginEnd="32dp"
                 android:ems="10"
                 android:background="@drawable/editxtcustom"
-                android:hint="Username"
+                android:hint="@string/username_login"
                 android:paddingHorizontal="20dp"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +90,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
                 style="@style/poppinsBold20"
-                android:text="PASSWORD"
+                android:text="@string/password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/etUsername" />
@@ -104,7 +104,7 @@
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/editxtcustom"
                 android:ems="30"
-                android:hint="password123"
+                android:hint="@string/password_login"
                 android:inputType="textPassword"
                 android:paddingStart="20dp"
                 android:paddingEnd="60dp"
@@ -118,7 +118,7 @@
                 android:layout_height="50dp"
                 android:layout_marginEnd="5dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="Toggle Password Visibility"
+                android:contentDescription="@string/show_pass"
                 android:src="@drawable/baseline_visibility_off"
                 app:layout_constraintBottom_toBottomOf="@+id/etPassword"
                 app:layout_constraintEnd_toEndOf="@+id/etPassword"
@@ -133,7 +133,7 @@
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/btncustom"
                 android:paddingHorizontal="40dp"
-                android:text="Login"
+                android:text="@string/login_btn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvRegister" />
 
@@ -143,7 +143,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
-                android:text="Don't have any account? click here"
+                android:text="@string/register_direct"
                 android:textAlignment="textEnd"
                 android:textColor="@color/blue"
                 app:layout_constraintEnd_toEndOf="parent"
